--- a/src/main.css
+++ b/src/main.css
@@ -2,6 +2,10 @@ table {
 	cursor: pointer;
 }
 
+mark {
+	background-color: yellow;
+}
+
 .page-button {
 	width: 50px;
 	margin-top: 5px;
@@ -32,12 +36,17 @@ table {
 	margin-top: 5px;
 }
 
+.main__content {
+	position: relative;
+}
+
 .preloader {
-	position: fixed;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
+	position: absolute;
+	width: 300px;
+	height: 20px;
+	top: 250px;
+	left: 50%;
+    transform: translateX(-50%);
 	background-image: url("30.gif");
 	background-repeat: no-repeat;
 	background-position: center;
